--- a/Wbod/Views/Directors/Edit.cshtml
+++ b/Wbod/Views/Directors/Edit.cshtml
@@ -108,7 +108,7 @@
             <span asp-validation-for="MyImage" class="text-danger"></span>
             <div class="form-group">
                 <label asp-for="Info" class="control-label"></label>
-                <textarea id="Info" name="Info"></textarea>
+                <textarea asp-for="Info"></textarea>
                 <span asp-validation-for="Info" class="text-danger"></span>
             </div>
             <div class="form-group">
