Big changes to directorship committees. add five new tables and five new fields to table directorship. changes to dbcontext.

--- a/Wbod/Views/Directors/Details.cshtml
+++ b/Wbod/Views/Directors/Details.cshtml
@@ -44,9 +44,9 @@
                         <strong>Govt: </strong>@Html.DisplayFor(model => model.CwegovtNavigation.Positiontype)<br />
                         <strong>Pvt. Academic: </strong>@Html.DisplayFor(model => model.CweacademicNavigation.Positiontype)<br />
                         <br />
-                        <h6 class="card-title">Association</h6>
-                        <strong>Professional Body: </strong>@Html.DisplayFor(model => model.ProfessionalbodyNavigation.Organizationtype)<br />
-                        <strong>Voluntary Body: </strong>@Html.DisplayFor(model => model.VoluntarybodyNavigation.Organizationtype)
+                        <h6 class="card-title">Affliations</h6>
+                        <strong>Affliation 1:</strong>@Html.DisplayFor(model => model.ProfessionalbodyNavigation.Organizationtype)<br />
+                        <strong>Affliation 2:</strong>@Html.DisplayFor(model => model.VoluntarybodyNavigation.Organizationtype)
                     </p>                   
                 </div>
             </div>
