--- a/Wbod/Views/Directorships/Edit.cshtml
+++ b/Wbod/Views/Directorships/Edit.cshtml
@@ -38,24 +38,57 @@
             </div>
             <div class="form-row">
                 <div class="form-group col-md-6">
+                    <label asp-for="Desos"></label>
+                    <select asp-for="Desos" asp-items="ViewBag.Directoresos" class="form-control"></select>
+                    <span asp-validation-for="Desos" class="text-danger"></span>
+                </div>
+                <div class="form-group col-md-6">
+                    <label asp-for="Drisk"></label>
+                    <select asp-for="Drisk" asp-items="ViewBag.Directorrisk" class="form-control"></select>
+                    <span asp-validation-for="Drisk" class="text-danger"></span>
+                </div>
+            </div>
+            <div class="form-row">
+                <div class="form-group col-md-6">
+                    <label asp-for="Dexec"></label>
+                    <select asp-for="Dexec" asp-items="ViewBag.Directorexec" class="form-control"></select>
+                    <span asp-validation-for="Dexec" class="text-danger"></span>
+                </div>
+                <div class="form-group col-md-6">
+                    <label asp-for="Dtender"></label>
+                    <select asp-for="Dtender" asp-items="ViewBag.Directortender" class="form-control"></select>
+                    <span asp-validation-for="Dtender" class="text-danger"></span>
+                </div>
+            </div>
+            <div class="form-row">
+                <div class="form-group col-md-6">
                     <label asp-for="Dnom"></label>
                     <select asp-for="Dnom" asp-items="ViewBag.Directornom" class="form-control"></select>
                     <span asp-validation-for="Dnom" class="text-danger"></span>
                 </div>
                 <div class="form-group col-md-6">
+                    <label asp-for="Dfinance"></label>
+                    <select asp-for="Dfinance" asp-items="ViewBag.Directorfinance" class="form-control"></select>
+                    <span asp-validation-for="Dfinance" class="text-danger"></span>
+                </div>
+            </div>
+            <div class="form-row">
+                <div class="form-group col-md-6">
                     <label asp-for="Duration"></label>
                     <input asp-for="Duration" class="form-control">
                     <span asp-validation-for="Duration" class="text-danger"></span>
-                </div>                                   
-                    <input type="hidden" asp-for="Directorid" />
-                    <input type="hidden" asp-for="Companyid" />
-                    <input type="hidden" asp-for="SessionId" />
-                    <input type="hidden" name="returnUrl" value="@ViewBag.returnUrl" />
-               
-                    <div class="form-group">
-                        <a a href="javascript:void(0);" onclick="history.go(-1);" class="btn btn-secondary">Cancel</a>
-                        <input type="submit" value="Save Info" class="btn btn-primary" />
-                    </div>
+                </div>
+            </div>
+                <input type="hidden" asp-for="Directorid" />
+                <input type="hidden" asp-for="Companyid" />
+                <input type="hidden" asp-for="SessionId" />
+                <input type="hidden" name="returnUrl" value="@ViewBag.returnUrl" />
+
+                <div class="form-group">
+                    <a a href="javascript:void(0);" onclick="history.go(-1);" class="btn btn-secondary">Cancel</a>
+                    <input type="submit" value="Save Info" class="btn btn-primary" />
+                </div>
+            
         </form>
     </div>
 </div>
