updated fieldofstudies2 to directors. new ftable and relationship added to db. stackify tracer used in local startup, not needed in server.

--- a/Wbod/Views/Directors/Details.cshtml
+++ b/Wbod/Views/Directors/Details.cshtml
@@ -37,6 +37,7 @@
                         <strong>Level: </strong>@Html.DisplayFor(model => model.EducationlevelNavigation.Edulevel)<br />
                         <strong>Place: </strong> @Html.DisplayFor(model => model.PlaceofeducationNavigation.Place)<br />
                         <strong>Field: </strong>@Html.DisplayFor(model => model.FieldofstudiesNavigation.Fieldname)<br />
+                        <strong>Field: </strong>@Html.DisplayFor(model => model.FieldofstudiesNavigation2.Fieldname)<br />
                         <br />
                         <h6 class="card-title">Current Work Experience</h6>
                         <strong>PLC :</strong>@Html.DisplayFor(model => model.CweplcNavigation.Positiontype)<br />
