--- a/Wbod/Views/Directors/Edit.cshtml
+++ b/Wbod/Views/Directors/Edit.cshtml
@@ -54,6 +54,10 @@
                     <label asp-for="Fieldofstudies" class="control-label"></label>
                     <select asp-for="Fieldofstudies" class="form-control" asp-items="ViewBag.Fieldofstudies"></select>
                 </div>
+                <div class="col form-group">
+                    <label asp-for="Fieldofstudies2" class="control-label"></label>
+                    <select asp-for="Fieldofstudies2" class="form-control" asp-items="ViewBag.Fieldofstudies2"></select>
+                </div>
             </div>
             <div class="form-row">
                 <div class="col form-group">
