--- a/Wbod/Views/Directors/List.cshtml
+++ b/Wbod/Views/Directors/List.cshtml
@@ -49,7 +49,7 @@
                     }
                 }],
                 "ajax": {
-                    url: "http://localhost:54026/Directors/DirectorJson",
+                    url: "http://womendirectors.my/Directors/DirectorJson",
                     dataSrc: ""
                 },
                 "deferRender": true
