add id description for autocomplete on director's name

--- a/Wbod/Views/Directorships/GetDirectorList.cshtml
+++ b/Wbod/Views/Directorships/GetDirectorList.cshtml
@@ -117,6 +117,12 @@
                     url: "/Companies/Directorj",
 
                     getValue: "name",
+                    template: {
+                        type: "description",
+                        fields: {
+                            description: "id"
+                        }
+                    },
 
                     list: {
                         match: {
