Update Core.All to 2.15 as per security notification. Add ordering to Directors names.

--- a/Wbod/Views/Directors/List.cshtml
+++ b/Wbod/Views/Directors/List.cshtml
@@ -33,7 +33,7 @@
                 "paging": true,
                 "lengthChange": true,
                 "searching": true,
-                "ordering": false,
+                "ordering": true,
                 "info": true,
                 "autoWidth": true,
                 "columns": [
